# cppapi

./: .gitignore  CMakeLists.txt  README.md  config.txt  schema.sql  seed.sql
include/: global_variables.h  routes.h
include/http/: connection.h  file_cache.h  request.h  request_data.h  response.h  server.h
include/routes/: 0.h  applications.h  auth.h  departments.h  etc.h  files.h  users.h
include/utils/: config.h  logger.h  router.h  simple_objects.h  validator.h
include/work/: context.h  controller.h
src/: main.cpp
src/http/: connection.cpp  file_cache.cpp  request_data.cpp  server.cpp
src/utils/: config.cpp  logger.cpp  router.cpp  sha1.cpp  validator.cpp
src/work/: context.cpp  controller.cpp  db_adapter.cpp
tests/: log_to_file.h  main.cpp  test_1.h  tests.h
